@@ -2,21 +2,26 @@ package com.eurekaAccounts.stocks.service;
 
 import com.eurekaAccounts.stocks.dao.LookUpDAO;
 import com.eurekaAccounts.stocks.dao.LookUpStockFundamentals;
+import com.eurekaAccounts.stocks.dao.LookUpStockPriceHistoryDAO;
 import com.eurekaAccounts.stocks.sorting.SubSectorNameComparator;
 import com.eurekaAccounts.stocks.vo.SectorVO;
 import com.eurekaAccounts.stocks.vo.StockFundamentalsVO;
+import com.eurekaAccounts.stocks.vo.StockPriceHistoryVO;
 import com.eurekaAccounts.stocks.vo.SubSectorVO;
 import com.eurekaAccounts.stocks.dao.lookUpAllSubSectorDAO;
 
 import java.math.BigDecimal;
 import java.sql.SQLException;
+import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.sql.Date;
 
 public class MarketAnalyticsService {
     LookUpDAO lookUpDAO = new LookUpDAO();
     lookUpAllSubSectorDAO lookupAllSubSectorsDAO1 = new lookUpAllSubSectorDAO();
     LookUpStockFundamentals lookUpStockFundamentals = new LookUpStockFundamentals();
+    LookUpStockPriceHistoryDAO lookUpStockPriceHistoryDAO = new LookUpStockPriceHistoryDAO();
 
     public String getAllSectorService() throws SQLException {
         List<SectorVO> allSectors = lookUpDAO.getSpecificSector(35);
@@ -71,15 +76,15 @@ public class MarketAnalyticsService {
     }
     public void getSumOfMktCapOfHealthCareStocks() throws SQLException {
         List<StockFundamentalsVO> stockFundamentalsVOS = lookUpStockFundamentals.getAllStockFundamentals();
-        Optional<BigDecimal> sumOfMktCap = stockFundamentalsVOS.stream()
+        Optional<Long> sumOfMktCap = stockFundamentalsVOS.stream()
                 .map(x->x.getMarketCap())
-                .reduce((a,b)->a.add(b));
+                .reduce((a,b)->a+b);
         sumOfMktCap.ifPresent(x-> System.out.println(x));
 
         sumOfMktCap.ifPresent(System.out::println);
 
         stockFundamentalsVOS.parallelStream().map(x->x.getMarketCap())
-                .reduce((a,b)->a.add(b));
+                .reduce((a,b)->a+b);
 
     }
 
@@ -105,10 +110,28 @@ public class MarketAnalyticsService {
         List<StockFundamentalsVO> stockFundamentalsVOS = lookUpStockFundamentals.getAllStockFundamentals();
 
         List<String> blueChipTickerSymbols = stockFundamentalsVOS.stream()
-                .filter(x-> x.getSectorId().equals(34))
-                .filter(x->x.getMarketCap().compareTo(new BigDecimal(100000000))>0)
+                .filter(x-> x.getSectorId().equals(new BigDecimal(34)))
+                .filter(x->x.getMarketCap()> 10000000000L)
                 .map(StockFundamentalsVO::getTickerSymbol)
-                .collect(Collectors.toList());
+                .toList();
         return blueChipTickerSymbols;
+    }
+
+
+
+    public List<StockPriceHistoryVO> getTeslaStockPriceHistory(String tsla,Date date) throws SQLException {
+        LocalDate threeMonthsAgo = LocalDate.now().minusMonths(12);
+        Date sqlDate = Date.valueOf(threeMonthsAgo);
+        List<StockPriceHistoryVO> stockPriceHistoryVOS = lookUpStockPriceHistoryDAO.getStockPriceHistory(tsla,date);
+        return stockPriceHistoryVOS;
+    }
+
+
+    //get the ave marketcap for each sector store in map int and bigDecimal , key is sectorId and value is ave marketCap
+    public void getAveMarketCap() throws SQLException {
+        List<StockFundamentalsVO> stockFundamentalsVOS = lookUpStockFundamentals.getAllStockFundamentals();
+        stockFundamentalsVOS.stream().filter(x->x.getSectorId());
+
+
     }
 }
